--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     padding: 0;
     margin: 0;
-    background-color: rgba(0, 0, 0, 0.1);
+    background-color: aqua;
 }
 
 /* ----- Container ----- */
@@ -23,9 +23,10 @@ body {
 .header {
     width: 380px;
     height: 200px;
-    background-image: url('img1.svg');
-    background-size: 150%;
+    background: url('img1.svg');
+    background-size: 200%;
     background-color: lightblue;
+    background-position: -100px -175px;
     border-radius: 15px 15px 0 0;
     position: relative;
 }
@@ -55,6 +56,7 @@ body {
     bottom: 10px;
     color: white;
     font-size: 25px;
+    text-shadow: 1px 3px 5px black;
 }
 
 /* ----- Content ----- */
