--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *, *:before, *:after {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
