--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* ----- Container ----- */
 
-.container {
+.app {
 
     width: 380px;
     margin: 10px auto 0px;
@@ -34,7 +34,7 @@ body {
     position: relative;
 }
 
-#clear {
+.todo-list-refresher {
     width: 30px;
     height: 30px;
     position: absolute;
@@ -42,18 +42,18 @@ body {
     top: 20px;
 }
 
-#clear i {
+.todo-list-refresher__redo-icon {
     font-size: 30px;
     color: white;
+    cursor: pointer;
 }
 
-#clear i:hover {
-    cursor: pointer;
+.todo-list-refresher__redo-icon:hover {
     text-shadow: 1px 3px 5px rgba(0, 0, 0, 0.4);
     transform: rotate(45deg);
 }
 
-#date {
+.date {
     position: absolute;
     left: 10px;
     bottom: 10px;
@@ -64,7 +64,7 @@ body {
 
 /* ----- Content ----- */
 
-.content {
+.main-content {
     width: 380px;
     height: 350px;
     background: white;
@@ -72,12 +72,12 @@ body {
     overflow: auto;
 }
 
-.content ul {
+.todo-list {
     padding: 0;
     margin: 0;
 }
 
-.item {
+.todo-list__item {
     width: 380px;
     height: 45px;
     min-height: 45px;
@@ -88,33 +88,25 @@ body {
     margin: 0;
 }
 
-.item i.fa-circle {
-    position: absolute;
-    font-size: 25px;
-    padding-left: 5px;
-    left: 15px;
-    top: 10px;
-}
-
-.item i.fa-circle:hover {
+.todo-list__circle-icon {
     cursor: pointer;
-}
-
-.fa-check-circle {
-    color: green;
-    position: absolute;
     font-size: 25px;
-    padding-left: 5px;
+    position: absolute;
     left: 15px;
     top: 10px;
+}   
+
+.todo-list__circle-icon--unchecked {
+    padding-left: 5px;
+    
 }
 
-.lineThrough{
-    text-decoration: line-through;
-    color : rgb(124, 49, 49);
+.todo-list__circle-icon--checked {
+    color: green;
+    padding-left: 5px;
 }
 
-.item p.text {
+.todo-list__text {
     position: absolute;
     padding: 0;
     margin: 0;
@@ -125,21 +117,26 @@ body {
     max-width: 285px;
 }
 
-.item i.fa-trash-alt {
+.todo-list__text--linethrough {
+    text-decoration: line-through;
+    color : rgb(124, 49, 49);
+}
+
+.todo-list__trash-icon {
     position: absolute;
     font-size: 25px;
     right: 15px;
     top: 10px;
+    cursor: pointer;
 }
 
-.item i.fa-trash-alt:hover {
+.todo-list__trash-icon:hover {
     color: red;
-    cursor: pointer;
 }
 
 /* ----- Add Item ----- */
 
-.add-item {
+.item-adder {
     position: relative;
     width: 380px;
     height: 61px;
@@ -149,13 +146,13 @@ body {
     
 }
 
-.add-item i {
+.item-adder__plus-circle-icon {
     position: absolute;
     font-size: 40px;
     color: blue;
 }
 
-.add-item input {
+.item-adder__input {
     position: absolute;
     left: 50px;
     height: 35px;
@@ -168,7 +165,7 @@ body {
 
 /* ----- Theme ----- */
 
-#theme {
+.theme-selector {
     position: absolute;
     top: 20px;
     left: 20px;
@@ -176,10 +173,7 @@ body {
     height: 25px;
 }
 
-#theme i {
+.theme-selector__toggle-icon {
     font-size: 30px;
-}
-
-#theme i:hover {
     cursor: pointer;
 }
