repositioned toggle icon

--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,7 @@ body {
 .theme-selector {
     position: absolute;
     top: 20px;
-    left: 20px;
+    right: 20px;
     width: 25px;
     height: 25px;
 }
