--- a/css/style.css
+++ b/css/style.css
@@ -153,6 +153,11 @@ body {
     top: 10px;
 }
 
+.edit {
+    border: 0px solid transparent;
+    border-bottom: 1px solid black;
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
