--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,8 @@ body {
     padding: 0;
     margin: 0;
     transition: border 0.5s, background 0.5s;
+    display: flex;
+    align-items: center;
 }
 
 /* .todo-list__item--done:focus,
@@ -102,9 +104,10 @@ body {
 .todo-list__circle-icon {
     cursor: pointer;
     font-size: 1.5625rem;
-    position: absolute;
+    margin-left: 0.2em;
+    /* position: absolute;
     left: 15px;
-    top: 10px;
+    top: 10px; */
 }   
 
 .todo-list__circle-icon--unchecked {
@@ -118,12 +121,10 @@ body {
 }
 
 .todo-list__text {
-    position: absolute;
     padding: 0;
     margin: 0;
     font-size: 1.25rem;
-    left: 50px;
-    top: 10px;
+    margin-left: 0.25em;
     max-width: 285px;
     background: inherit;
 }
@@ -135,27 +136,37 @@ body {
 }
 
 .todo-list__trash-icon {
-    position: absolute;
     font-size: 1.5625rem;
-    right: 15px;
-    top: 10px;
     cursor: pointer;
     display: none;
+    margin-left: auto;
+    margin-right: 1em;
     animation: fadeIn 0.5s;
 }
 
 .todo-list__trash-icon:hover {
     color: red;
-    position: absolute;
     font-size: 1.5625rem;
-    right: 15px;
-    top: 10px;
 }
 
 .edit {
     border: 0;
     border-bottom: 0.0625rem outset black;
     color: white;
+}
+
+.edit__confirm {
+    width: 18px;
+    height: 10px;
+    border: 0;
+    border-bottom: 3px solid blue;
+    border-left: 3px solid blue;
+    transform: rotate(-50deg);
+    cursor: pointer;
+}
+
+.edit__confirm:hover {
+    border-color: darkblue;
 }
 
 @keyframes fadeIn {
